--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,4 @@ Depends: R (>= 2.4), fields, globaltest, marray, quantsmooth, clac
 Description: Finds associations between DNA copy number and gene expression.
 License: GPL (>= 2)
 biocViews: Microarray, DNACopyNumber, Statistics, Visualization
+URL: http://www.humgen.nl/MicroarrayAnalysisGroup.html
