Changed biocViews entry of Statistics to Bioinformatics.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SIM@38070 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: SIM
 Type: Package
 Title: Integrated Analysis of gene expression and copynumber data
-Version: 1.11.1
+Version: 1.11.2
 Author: Renee X. de Menezes and Judith M. Boer
 Maintainer: Maarten van Iterson <M.van_Iterson.HG@lumc.nl>
 Depends: R (>= 2.4), fields, globaltest, marray, quantsmooth, clac, multtest
 Description: Finds associations between DNA copy number and gene expression.
 License: GPL (>= 2)
-biocViews: Microarray, DNACopyNumber, Statistics, Visualization
+biocViews: Microarray, DNACopyNumber, Bioinformatics, Visualization
 URL: http://www.humgen.nl/MicroarrayAnalysisGroup.html
