--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,5 @@ Maintainer: Maarten van Iterson <M.van_Iterson.HG@lumc.nl>
 Depends: R (>= 2.4), fields, globaltest, marray, quantsmooth, clac, multtest
 Description: Finds associations between DNA copy number and gene expression.
 License: GPL (>= 2)
-biocViews: Microarray, DNACopyNumber, Bioinformatics, Visualization
+biocViews: Microarray, CopyNumberVariants, Bioinformatics, Visualization
 URL: http://www.humgen.nl/MicroarrayAnalysisGroup.html
