removed invalid biocViews terms
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SIM@50725 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,4 @@ Depends: R (>= 2.4), quantreg
 Suggests: biomaRt
 Description: Finds associations between two human genomic datasets.
 License: GPL (>= 2)
-biocViews: Microarray, DNACopyNumber, Bioinformatics, Visualization
+biocViews: Microarray, Bioinformatics, Visualization
