--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: SIM
 Type: Package
 Title:  Integrated Analysis on two human genomic datasets
-Version: 1.29.1
+Version: 1.29.2
 Author: Renee X. de Menezes and Judith M. Boer
-Maintainer: Maarten van Iterson <mviterson@gmail.com>
+Maintainer: Renee X. de Menezes <r.xavierdemenezes@vumc.nl>
 Imports: graphics, stats, globaltest, quantsmooth
 Depends: R (>= 2.4), quantreg
 Suggests: biomaRt, RColorBrewer
